# marimow

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
.zed/: tasks.json
generate_tests/: Cargo.toml
generate_tests/src/: lib.rs
src/: lib.rs  main.rs
tests/: convert_test.rs
tests/data/: multiple_cells_no_init.py  multiple_cells_no_init_output.py  no_init.py  no_init_output.py  one_cell.py  one_cell_output.py  only_comments.py  only_comments_output.py  only_init_output.py
