[package]
name = "marimow"
authors = ["Aditya Singh <1adityasingh@proton.me>"]
description = "TODO"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ctrlc = "3.4.7"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
notify = "8.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"

[dev-dependencies]
generate_tests = { path = "generate_tests" }
nix = "0.30.1"
quote = "1.0.40"
syn = "2.0.104"
tempfile = "3.20.0"

[workspace]
members = ["generate_tests", "."]
